<resources>
  <string name="app_name">Meal Or No Meal</string>
  <string name="ingredients">Ingredients</string>
  <string name="calendar">Calendar</string>
  <string name="shopping_list">Shopping List</string>
  <string name="meals">Meals</string>
  <string name="permissions_dialog_title">Permissions Info</string>
  <string name="home_second">Home Second</string>
  <string name="login_failure">Unable to sign in with credentials</string>
  <string name="sign_out">Sign out</string>
  <string name="meal_or_no_meal"><![CDATA[Meal or no Meal]]></string>
  <string name="title_calendar">Calendar</string>
  <string name="title_meals">Meals</string>
  <string name="title_shopping_list">Shopping List</string>
  <string name="my_meals">MY MEALS</string>
  <string name="meal_name">MEAL NAME</string>
  <string name="prep_time">Prep Min:</string>
  <string name="ingredients_title">INGREDIENTS</string>
  <string name="ingredients_placeholder">SOME EDIBLE STUFF</string>
  <string name="instructions">INSTRUCTIONS</string>
  <string name="recipe_placeholder">MAKE THE EDIBLE STUFF HOT IN ALL SORTS OF DIFFERENT WAYS!</string>
  <string name="equipment_needed">WHAT YOU NEED</string>
  <string name="equipment_placeholder">SHARP THINGS AND FLAT THINGS THAT DON\'T BURN OR MELT WHEN YOU PUT THEM IN FIRE</string>
  <string name="save">SAVE</string>
  <string name="title_activity_login">login</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="delete">Delete</string>
</resources>
