<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".HomeFragment">

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/horizontal_guideline"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

<Button
    android:id="@+id/calendar_month"
  android:layout_width="0dp"
  android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@id/calendar_layout"
    app:layout_constraintEnd_toEndOf="pa"
    app:layout_constraintTop_toBottomOf="@id/ingredient"
    app:layout_constraintBottom_tof="@"
    android:text="@string/calendar"/>

  <Button
    android:id="@+id/ingredient"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@id/vertical_guideline"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@id/horizontal_guideline"
    app:layout_constraintBottom_toTopOf="@id/meals"
    android:text="@string/ingredients"/>



  <Button
    android:id="@+id/shopping_list"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="@id/vertical_guideline"
    app:layout_constraintTop_toBottomOf="parent"
    app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"
    android:text="@string/ingredients"/>


  <Button
    android:id="@+id/meals"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@id/vertical_guideline"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/horizontal_guideline"
    app:layout_constraintBottom_toBottomOf="parent"
    android:text="@string/meals"/>